# icnc

./: .travis.yml  CMake.inc  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  README.md  make_kit.py
samples/: CMakeLists.txt  Makefile  allsamples.sln  make_vcxproj.py.in
samples/FaceDetection/: Readme.txt
samples/FaceDetection/FaceDetection/: CMakeLists.txt  FaceDetection.cnc  FaceDetection.cpp  FaceDetection.h  FaceDetection.vcproj  FaceDetection.vcxproj  Makefile  fd.cpp
samples/FaceDetection/FaceDetection_serial/: FaceDetection_serial.cpp  FaceDetection_serial.vcproj  Makefile  fd.cpp
samples/auto_graph_pipeline/: .project  CMakeLists.txt  Makefile  ReadMe.txt
samples/blackscholes/blackscholes/: CMakeLists.txt  Makefile  Readme.txt  blackscholes.cnc  blackscholes.cpp  blackscholes.h  blackscholes.vcproj  blackscholes.vcxproj  optionData.txt
samples/cholesky/: Readme.txt
samples/cholesky/cholesky/: CMakeLists.txt  Makefile  cholesky.cpp  cholesky.h  cholesky.vcproj  cholesky.vcxproj  cholesky_cnc.cpp  cholesky_types.h  init.cpp
samples/count_all_words/count_all_words/: CMakeLists.txt  Makefile  count_all_words.cpp  count_all_words.vcxproj
samples/count_all_words/mapreduce/: CMakeLists.txt  Makefile  mapreduce.cpp  mapreduce.h  mapreduce.vcxproj
samples/count_words/count_words/: CMakeLists.txt  Makefile  count_words.cpp  count_words.vcxproj
samples/db/mysql_simple/: CMakeLists.txt  Makefile  mysql_adaptor.h  mysql_config.h  mysql_item_table.h  mysql_simple.cpp  mysql_simple.vcxproj  mysql_tuner.h  statement_adaptor.h
samples/dedup/: ReadMe.txt
samples/dedup/dedup/: CMakeLists.txt  LICENSE  Makefile  binheap.cpp  binheap.h  config.h  decoder.h  dedup.cpp  dedup.vcproj  dedup.vcxproj  dedup_debug.h  dedupdef.h  encoder.h  encoder_cnc.cnc  encoder_cnc.cpp  encoder_util.cpp  encoder_util.h  hashtable.cpp  hashtable.h  hashtable_private.h  queue.cpp  queue.h  rabin.cpp  rabin.h  tree.cpp  tree.h  util.cpp  util.h
samples/divide_conquer/divide_conquer/: CMakeLists.txt  Makefile  Readme.txt  divide_conquer.cnc  divide_conquer.cpp  divide_conquer.h  divide_conquer.vcproj  divide_conquer.vcxproj
samples/fib/: ReadMe.txt
samples/fib/fib/: CMakeLists.txt  Makefile  fib.cnc  fib.cpp  fib.h  fib.vcproj  fib.vcxproj
samples/fib/fib_getcount/: CMakeLists.txt  Makefile  ReadMe.txt  fib.h  fib_getcount.cpp  fib_getcount.vcproj  fib_getcount.vcxproj
samples/fib/fib_memoize/: CMakeLists.txt  Makefile  ReadMe.txt  fib.h  fib_memoize.cpp  fib_memoize.vcproj  fib_memoize.vcxproj
samples/fib/fib_preschedule/: CMakeLists.txt  Makefile  ReadMe.txt  fib.h  fib_preschedule.cpp  fib_preschedule.vcproj  fib_preschedule.vcxproj
samples/fib/fib_range/: CMakeLists.txt  Makefile  ReadMe.txt  fib_range.cpp  fib_range.vcproj  fib_range.vcxproj
samples/fib/fib_stats/: CMakeLists.txt  Makefile  ReadMe.txt  fib.h  fib_stats.cpp  fib_stats.vcproj  fib_stats.vcxproj
samples/fib/fib_trace/: CMakeLists.txt  Makefile  ReadMe.txt  fib.cnc  fib.h  fib_trace.cpp  fib_trace.vcproj  fib_trace.vcxproj
samples/fib/fib_tuner/: CMakeLists.txt  Makefile  ReadMe.txt  fib.cnc  fib.h  fib_tuner.cpp  fib_tuner.vcproj  fib_tuner.vcxproj
samples/fib/fib_tutorial/: CMakeLists.txt  Makefile  ReadMe.txt  fibTutorial.cpp  fibTutorial.vcproj  fib_tutorial.vcxproj
samples/floyd_warshall/: ReadMe.txt
samples/floyd_warshall/common/: cnc_common.h  floyd_base.cpp  floyd_base.h  utils.cpp  utils.h
samples/floyd_warshall/floyd_1d_tiled/: CMakeLists.txt  Makefile  floyd_1d_tiled.vcxproj  floyd_cnc.cpp  floyd_tuners.h
samples/floyd_warshall/floyd_2d_tiled/: CMakeLists.txt  floyd_2d_tiled.vcxproj  floyd_cnc.cpp  floyd_tuners.h
samples/floyd_warshall/floyd_3d_tiled/: CMakeLists.txt  floyd_3d_tiled.vcxproj  floyd_cnc.cpp  floyd_tuners.h
samples/gen_new_iter_space/gen_new_iter_space/: CMakeLists.txt  Makefile  Readme.txt  (+5 more)
samples/mandelbrot/: Readme.txt
samples/matrix_inverse/: Readme.txt  tile.h
samples/pipeline/: pipeline.cpp  pipeline.h  pl_tuner.h
samples/primes/: Readme.txt
samples/rtm_stencil/: ReadMe.txt
samples/simple_priorities/: Makefile  README.txt  run.sh  simple_priorities.cpp
samples/sor/: ReadMe.txt
samples/streaming/: Makefile  ReadMe.txt
tests/: CMakeLists.txt  ReadMe.txt  compare.py  make_ref.py  run.py  run_compare.cmake
tests/cholesky/: CMakeLists.txt
tests/current_vals/: CMakeLists.txt  current_vals.cpp  current_vals.ref
tests/dedup/: CMakeLists.txt
tests/fib/: distfib.ref  fib.cpp  fib.ref
tests/floyd_warshall/: CMakeLists.txt
tests/heat_equation/: CMakeLists.txt  heat_equation.ref
tests/hidden_graph/: CMakeLists.txt  hidden_graph.cpp
tests/join/: CMakeLists.txt  join.cpp  join.ref
tests/mandelbrot/: CMakeLists.txt  mandel10k.ref
tests/matrix_inverse/: CMakeLists.txt  matrix_inverse.ref
tests/mpicnc/: CMakeLists.txt  mpicnc.ref
tests/nqueens/: CMakeLists.txt  nqueens.ref
tests/pass_on/: CMakeLists.txt  distpass_on_all.ref  distpass_on_bcast.ref  pass_on_all.cpp  pass_on_all.ref  pass_on_bcast.cpp
tests/pipeline/: CMakeLists.txt  pipeline.ref
tests/primes/: CMakeLists.txt  fp100k.ref
tests/quicksort/: CMakeLists.txt  quickSort.cpp  quickSortSimplified.cpp  quickerSort.cpp
tests/reduce/: CMakeLists.txt  reduce_2d.ref
tests/rtm_stencil/: CMakeLists.txt  rtm_stencil.ref
tests/simple/: CMakeLists.txt  cancel.cpp  cancel.ref  distcancel.ref  distmultiple_contexts.ref  distsequentialize.ref  distsimple.ref  empty.cpp  multiple_contexts.cpp  multiple_contexts.ref  put_before_get.cpp  range_dep.cpp  range_dep.ref  sequentialize.cpp  sequentialize.ref  simple.cpp  simple.ref  simple_gc.cpp  simple_gc.ref  simple_par_for.cpp  simple_par_for.ref  simple_pointers.cpp  simple_range.cpp  simple_range.ref  simplest.cpp  tagstep.cpp  unsafe_chain.cpp  unsafe_chain.ref
tests/sor/: CMakeLists.txt  sorPrior_NewApi_w03_100x100_10x10_x50.ref  sor_w03_100x100_x50.ref
tests/streaming/: CMakeLists.txt  stream_with_state.ref  thread_ring.ref  thread_ring_1_stepcoll.ref
tests/uts/: CMakeLists.txt  uts.ref
tests/wordcount/: CMakeLists.txt
(+307 files in other folders)
